--- a/notebooks/00_practice-intro.ipynb
+++ b/notebooks/00_practice-intro.ipynb
@@ -43,37 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 669,
+   "execution_count": 715,
    "id": "a258cb2b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: numpy in /Users/pierrechambet/Desktop/graph-neural-networks/.venv/lib/python3.9/site-packages (2.0.2)\n",
-      "Requirement already satisfied: matplotlib in /Users/pierrechambet/Desktop/graph-neural-networks/.venv/lib/python3.9/site-packages (3.9.4)\n",
-      "Requirement already satisfied: scikit-learn in /Users/pierrechambet/Desktop/graph-neural-networks/.venv/lib/python3.9/site-packages (1.6.1)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /Users/pierrechambet/Desktop/graph-neural-networks/.venv/lib/python3.9/site-packages (from matplotlib) (1.3.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /Users/pierrechambet/Desktop/graph-neural-networks/.venv/lib/python3.9/site-packages (from matplotlib) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /Users/pierrechambet/Desktop/graph-neural-networks/.venv/lib/python3.9/site-packages (from matplotlib) (4.57.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /Users/pierrechambet/Desktop/graph-neural-networks/.venv/lib/python3.9/site-packages (from matplotlib) (1.4.7)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/pierrechambet/Desktop/graph-neural-networks/.venv/lib/python3.9/site-packages (from matplotlib) (24.2)\n",
-      "Requirement already satisfied: pillow>=8 in /Users/pierrechambet/Desktop/graph-neural-networks/.venv/lib/python3.9/site-packages (from matplotlib) (11.2.1)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/pierrechambet/Desktop/graph-neural-networks/.venv/lib/python3.9/site-packages (from matplotlib) (3.2.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /Users/pierrechambet/Desktop/graph-neural-networks/.venv/lib/python3.9/site-packages (from matplotlib) (2.9.0.post0)\n",
-      "Requirement already satisfied: importlib-resources>=3.2.0 in /Users/pierrechambet/Desktop/graph-neural-networks/.venv/lib/python3.9/site-packages (from matplotlib) (6.5.2)\n",
-      "Requirement already satisfied: scipy>=1.6.0 in /Users/pierrechambet/Desktop/graph-neural-networks/.venv/lib/python3.9/site-packages (from scikit-learn) (1.13.1)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in /Users/pierrechambet/Desktop/graph-neural-networks/.venv/lib/python3.9/site-packages (from scikit-learn) (1.4.2)\n",
-      "Requirement already satisfied: threadpoolctl>=3.1.0 in /Users/pierrechambet/Desktop/graph-neural-networks/.venv/lib/python3.9/site-packages (from scikit-learn) (3.6.0)\n",
-      "Requirement already satisfied: zipp>=3.1.0 in /Users/pierrechambet/Desktop/graph-neural-networks/.venv/lib/python3.9/site-packages (from importlib-resources>=3.2.0->matplotlib) (3.21.0)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/pierrechambet/Desktop/graph-neural-networks/.venv/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pip install numpy matplotlib scikit-learn\n",
+    "#%pip install numpy matplotlib scikit-learn\n",
     "# Import necessary libraries\n",
     "\n",
     "import numpy as np\n",
