--- a/notebooks/00_practice-intro.ipynb
+++ b/notebooks/00_practice-intro.ipynb
@@ -37,8 +37,7 @@
    "id": "2736234e",
    "metadata": {},
    "source": [
-    "> This is the **generic architecture** for training a neural network.  \n",
-    "> All neural networks in the world follow this same kind of procedure."
+    "> This is the **generic architecture** for training a neural network : All neural networks in the world follow this same kind of procedure."
    ]
   },
   {
@@ -61,14 +60,17 @@
    "id": "40ffe64e",
    "metadata": {},
    "source": [
-    "C'est partie pour le code.\n",
+    "Let's code.\n",
     "\n",
-    "nous allons generer un dataset de 100 points. chaque point est decrit par ses coordonnes (x1, x2), et une classe lui ait attribué. Voyez pour l'instant la notion de classe comme une verite terrain.\n",
+    "We generate a dataset of 100 points.  \n",
     "\n",
-    "X represente les donnes d'entrees (toutes les donnees x = (x1, x2))\n",
-    "y represente les donnees de reference = la verite terrain\n",
+    "Each point has two coordinates (x1, x2), and is assigned a class label.  \n",
+    "For now, you can think of the class as the ground truth.\n",
     "\n",
-    "chaque donnee x possede sa classe y."
+    "`X` contains the input data (each input x = (x1, x2))  \n",
+    "`y` contains the target values = ground truth\n",
+    "\n",
+    "Each input `x` has its corresponding class label `y`.\n"
    ]
   },
   {
@@ -113,9 +115,11 @@
    "id": "3157482f",
    "metadata": {},
    "source": [
-    "maintenant, on va creer la fonction initilaisation pour initialiser proprement les parantres W et b de notre models lineaire. en effet la variable d'entree x peut avoir plusieurs dimensions : x = (x1, x2, ..., xn). Il faut donc que le paraetres W s'adapte a la taille du vecteur x pour influer sur chacunes des composantes/ des dimensions de ce vecteur.\n",
+    "Now we will create an initialization function to properly initialize the parameters W and b of our linear model.\n",
     "\n",
-    "Ici, X est de dimensionion 2 car on peut representer les donnees d'entree sur 2 axes : X = (x1, x2)"
+    "Since the input x can have multiple dimensions (e.g., x = (x1, x2, ..., xn)), the parameter W needs to adapt to the size of x in order to influence each component of the input.\n",
+    "\n",
+    "Here, X has 2 dimensions since we can represent the input data on two axes: X = (x1, x2)"
    ]
   },
   {
@@ -152,11 +156,17 @@
    "id": "48cec0c3",
    "metadata": {},
    "source": [
-    "On voit que W est bien un vecteur a 2 colonnes, et b un nombre reel.\n",
+    "We see that W is a vector with 2 rows (matching the input dimension), and b is a single real number."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c0cf7c7",
+   "metadata": {},
+   "source": [
+    "Now let's code the model of our neuron. The question we're answering is: how does the neuron process the information it receives?\n",
     "\n",
-    "Maintenant on va coder le modele de notre neurone. on repondre a la question : comment le neurone traduit les informations qu'il recoit ?\n",
-    "\n",
-    "On choisit un modele lineaire. Le neurone traite lineairement la donnee qu'il recoit. Pour introduire de l'intelligence, on choisit une fonction d'activation du neurone non lineaire. Le neurone decide alors de s'activer ou non selon ce principe."
+    "We choose a linear model. The neuron processes the input linearly, but we add intelligence through a **non-linear activation function** : The neuron will \"activate\" based on this non-linear rule.\n"
    ]
   },
   {
@@ -188,9 +198,9 @@
    "id": "6a42f32c",
    "metadata": {},
    "source": [
-    "On a un vecteur a une colonne, 100 lignes. on a 100 activations car 100 donnees d'entree.\n",
+    "We now define the cost function: **Log Loss**\n",
     "\n",
-    "definissons maintenant la fonction cout : Log-Loss"
+    "This function returns a real number that quantifies the error between the model's prediction and the actual target.\n"
    ]
   },
   {
@@ -222,9 +232,7 @@
    "id": "63dea788",
    "metadata": {},
    "source": [
-    "On obtient bien un reel qui represente l'erreur entre le modele et la realite.\n",
-    "\n",
-    "maintenant occupons nous des gradients : une directtion infinitesimal vers ou aller pour minimiser la fonction cout."
+    "Now we handle the gradients: this gives us the infinitesimal direction in which we should move to minimize the cost function.\n"
    ]
   },
   {
@@ -259,7 +267,8 @@
    "id": "2ce9009b",
    "metadata": {},
    "source": [
-    "Maintenant qu'on a la direction ou aller, on met a jour de cette quentitte infinitesimal des parametres du models pour se rapprocher peu a peu du meilleur set de parametres (qui minismera la fonction cout)."
+    "Now that we have the direction (gradients), we update the model parameters by moving slightly in that direction.  \n",
+    "This helps the model gradually approach the best set of parameters (the ones that minimize the cost function).\n"
    ]
   },
   {
@@ -292,7 +301,7 @@
    "id": "e1fece6b",
    "metadata": {},
    "source": [
-    "On voit bien ici que les parametres (W, b) on ete mis a jour d'une petite quantite"
+    "We can see here the updates of (W, b) is well-handed."
    ]
   },
   {
@@ -300,9 +309,9 @@
    "id": "2c3b58e4",
    "metadata": {},
    "source": [
-    "Maintenant on rassemble toutes ces fonctions sur une meme architecture.\n",
+    "Now we bring all these functions together into a single architecture.\n",
     "\n",
-    "C'est la qu'on voit l'apprentissage : on donne en parametres d'entree simplement les donners X et y, rien de plus."
+    "This is where learning happens: we provide only the inputs `X` and the ground truth `y` as inputs to the function.\n"
    ]
   },
   {
@@ -352,18 +361,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "659008fc",
+   "metadata": {},
+   "source": [
+    "We can see how the model’s error evolves with each iteration — this is called the learning curve.\n",
+    "\n",
+    "We trained the model for 100 iterations, which means the model had 100 training sessions (or **epochs**) to improve.\n",
+    "\n",
+    "## We now have a trained artificial neuron after 100 epochs, and we can use it to make predictions.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "982c25d7",
    "metadata": {},
    "source": [
-    "On voit l'evolution des erreurs effectuer par le modele en fonction des iterations : c'est la courbe d'apprentissage\n",
+    "But everything is already in place for making predictions, since we just trained our model on our data.  \n",
+    "### Let’s consider the following scenario:\n",
     "\n",
-    "Le nombre d'iterations est de 100, c'est a dire qu'on l'a laisse s'entrainer 100 fois pour trouver le meilleur set de paramteres (W, b). Le neurone a eu 100 seances d'entrainement pour apprendre. Dans le jargon, une seance d'entrainement s'appelle une epoch.\n",
+    "We measured the width and length of leaves from 100 different plants.  \n",
+    "We plotted these measurements on a graph with two axes: width and length. These form our input data `X`.\n",
     "\n",
-    "Nous avons maintenant notre de neurone artificiel entraine apres 100 epochs : on peut s'en servir pour faire des predictions.\n",
+    "For each plant, we also knew whether it was toxic or not.  \n",
+    "This information is represented by the target values `y` in our model.\n",
     "\n",
-    "Mais en fait, tout est deja la pour faire le prediction car on vient d'entrainer notre modele sur les donnees qu'on a deja. On va considerer la situation suivante : On a mesurer la largeur/longueur de feuilles pour 100 differentes plantes, on a placer ces donnes sur un graphe avec deux axes : largeur/longueur. Ce sont nos donnees X. Pour chaque plante, on savait si celle ci etait toxique ou non. Cette information est representee par la donnee y de notre modele.\n",
+    "We trained the model and now want to evaluate how well it performs.  \n",
+    "For each plant, we check what the model would have predicted (toxic or not?), and compare it with the ground truth (was the plant actually toxic or not?).\n",
     "\n",
-    "On va entrainer notre modele en regardant pour chaque plante ce qu'il aurait predit (plante toxique ou non ?) et on va comparer avec la verite (la plante etait elle vraiment toxique ou non ?) et mesurer l'excactitude des resultats. Attention ici on ne parle pas de \"l'erreur\" du modele enoncee precedemment (qui participe a la precision de la prediction) mais bien de l'erreur finale : est ce que le modele a reussi a correctement predire la toxicite de la plante ? et sur 100 plantes quel est son taux de fausse predicition ?"
+    "This allows us to measure the **accuracy** of the model’s predictions.\n",
+    "\n",
+    "Note: We are no longer talking about the *loss* function used during training (which helps improve the model), but about the **final prediction accuracy**: Did the model correctly classify the plant as toxic or non-toxic? Out of 100 plants, how many times did it make a wrong prediction?"
    ]
   },
   {
@@ -371,11 +398,17 @@
    "id": "f55b079c",
    "metadata": {},
    "source": [
-    "Pour faire ceci, il faut une fonction de prediction. Si la probabilite que la plante soit toxique est superieur a 50%, alors en renvoit True, sinon False. Pour voir a quel point le modele est juste, il nous faut une mesure d'exctactitude, ie sur toutes les predictions de chaque point, quel est le pourcentage ou le neurone a bien predit la classe du point, et quand s'est il trompé.\n",
+    "## How do we build the prediction function ?\n",
     "\n",
-    "En fait on a deja cette fonction de prediciton. Comment le neurone predit la sortie en fonction de l'entree ? Avec son modele lineaire Z et sa fonction d'activation A.\n",
+    "Simple. How does our neuron predict the output based on the input?  \n",
+    "Using its **linear model** `Z` and the **activation function** `A`.\n",
     "\n",
-    "la sortie A est une probabilite. On a qu'a dire que si cette probabilite de sortie est superieur a 0.5, alors la plante a plus de chance d'etre toxique, donc on renvoie y = True. Sinon on renvoie False."
+    "The output `A` is a probability between 0 and 1.\n",
+    "\n",
+    "So we can simply say:\n",
+    "\n",
+    "- If `A > 0.5`, then the plant is **more likely** to be toxic → we return `True`\n",
+    "- Otherwise → we return `False`"
    ]
   },
   {
@@ -396,9 +429,11 @@
    "id": "5a105680",
    "metadata": {},
    "source": [
-    "L'avantage c'est que pour chaque resultat (True ou False), on peut revenir a la probabilite qui a per;is de fsaire ce choix afin voir a auelle point on peur faire confiance a ce resulatat. En effet si la proba est proche de 0 ou 1, on peut avoir confiance en ce resultat, mais si la probabilite est proche de 0.5, on aura moins confiance en ce resultat, car celui ci a des chamces d'etre faux. Si c'est le cas le modele aura mal predit, ce resultat sera compte comme faux. l'accuracy du modele ne sera pas de 100%.\n",
+    "The advantage is that for each prediction, we can trace back to the actual probability that led to the decision.  \n",
+    "If the probability is close to 0 or 1, we can trust the result more.  \n",
+    "But if it's close to 0.5, the prediction is more uncertain, and thus more likely to be incorrect.\n",
     "\n",
-    "Justement pour mesurer cette accuracy, on a qu'a compter sur les 100 donnees combien de fausses predictions le modele a fait :"
+    "To measure the model's **accuracy**, we count how many predictions are correct out of the total.\n"
    ]
   },
   {
@@ -416,7 +451,7 @@
    "id": "a621167d",
    "metadata": {},
    "source": [
-    "Maintenant regardons quelles sont les predicition du neurone pour les 100 plantes."
+    "## Now let’s see the neuron’s predictions for the 100 plants.\n"
    ]
   },
   {
@@ -486,13 +521,13 @@
    "id": "a3ab9628",
    "metadata": {},
    "source": [
-    "Vous avez accuracy_score = 0.92, ou bien 0.86 par exemple.\n",
+    "You might get an accuracy score of 0.92 or 0.86, for example.\n",
     "\n",
-    "Ca veut dire que dans 86% des cas, le neurone a reussi a predire la bonne classe, ie a predire si la plante, en fonction de la largeur/longeur de ses feuilles etait toxique (True) ou non (False).\n",
+    "This means that in 86% of the cases, the neuron correctly predicted whether a plant was toxic or not  \n",
+    "(based on its leaf length and width).\n",
     "\n",
-    "Et vous avez les parametres finaux W et b, qui representent le set de parametres du neurones entraines apres 100 iterations, qui est ici le meilleur set de parametres car on voit que la courbe d'apprentissage (loss function) est minimum a la fin.\n",
-    "\n",
-    "Maintenant on recolte une plante, et on mesure la largeur/longeur moyenne des feuilles. On la place en rouge dans le graphique."
+    "You also get the final parameters W and b, which represent the best-trained model after 100 iterations.  \n",
+    "This is confirmed by the fact that the loss curve reaches its minimum at the end.\n"
    ]
   },
   {
@@ -558,11 +593,11 @@
    "id": "5fb7e5cf",
    "metadata": {},
    "source": [
-    "Vous avez True car la probabilite de 0.88 > 0.5.\n",
+    "You get `True` because the predicted probability is 0.88, which is greater than 0.5.\n",
     "\n",
-    "Selon la machine, cette plante est dans la classe jaune ie classe des plantes toxiques.\n",
+    "So, according to the model, this plant is classified as toxic.\n",
     "\n",
-    "A quel point on peut croire ce resultat ? Le resultat est fiable a 88%."
+    "And we can trust this result with 88% confidence.\n"
    ]
   },
   {
@@ -570,15 +605,28 @@
    "id": "7bae7166",
    "metadata": {},
    "source": [
-    "Maintenant on comprend mieux comment le neurone classifie de nouvelles donnees.\n",
+    "Now we better understand how the neuron classifies new data.\n",
     "\n",
-    "On sent bien qu'il y a des points qui vont etre classe avec certitude (probabilite proche de 0 ou 1), et d'autre qui seront un peu entre les deux (probabilite proche de 0.5).\n",
+    "Some points will be classified with high confidence (probability close to 0 or 1),  \n",
+    "while others will fall in the gray area near 0.5, where predictions are more uncertain.\n",
     "\n",
-    "Si on represente tout les points qui se situe dans le graphique avec un probabilite de 0.5 pile, on se sait pas vraiment ou les classer. on appelle cette frontiere la frontiere de decision. Un mouvement infintesimal hors de cette frontiere, et le modele arrive a prendre une decison.\n",
+    "If we visualize all points with a probability of exactly 0.5,  \n",
+    "we get a boundary — the model can’t confidently classify points near it.\n",
     "\n",
-    "representons cette frontiere de decision sur le graphique.\n",
+    "This is called the **decision boundary**.\n",
     "\n",
-    "En reprenant l'expression mathematique de la fonction a et z (voire notebook--> 00_theory-intro), dire que a = 0.5 revient simplement a dire que z = 0."
+    "An infinitesimal move outside this boundary allows the model to make a decision.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e0bc7b4",
+   "metadata": {},
+   "source": [
+    "## Let’s plot the decision boundary on the graph.\n",
+    "\n",
+    "From the math behind the activation function,  \n",
+    "saying that `a = 0.5` is equivalent to saying that `z = 0`.\n"
    ]
   },
   {
@@ -2500,7 +2548,23 @@
    "id": "f2029c52",
    "metadata": {},
    "source": [
-    "On voit bien ici la focntion sigmoide (la fonction d'activation) et la maniere dont elle classifie les differentes planres entre toxique / non toxique."
+    "We can clearly see here how the **sigmoid function** (our activation function)  \n",
+    "helps to classify the different plants into two categories: **toxic** or **non-toxic**.\n",
+    "\n",
+    "The sigmoid outputs a value between 0 and 1, up and down.\n",
+    "\n",
+    "- If the output is close to 1 → the model predicts the plant is **toxic**\n",
+    "- If the output is close to 0 → the model predicts the plant is **non-toxic**\n",
+    "\n",
+    "This is why the sigmoid is commonly used in binary classification problems.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11f135bd",
+   "metadata": {},
+   "source": [
+    "So congrats, you just understood a binary classification model."
    ]
   }
  ],
