--- a/notebooks/00_practice-intro.ipynb
+++ b/notebooks/00_practice-intro.ipynb
@@ -164,7 +164,7 @@
    "id": "3c0cf7c7",
    "metadata": {},
    "source": [
-    "Now let's code the model of our neuron. The question we're answering is: how does the neuron process the information it receives?\n",
+    "Now let's code the model of our neuron. The question we're answering is: **how does the neuron process the information it receives?**\n",
     "\n",
     "We choose a linear model. The neuron processes the input linearly, but we add intelligence through a **non-linear activation function** : The neuron will \"activate\" based on this non-linear rule.\n"
    ]
@@ -531,6 +531,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7bdb1181",
+   "metadata": {},
+   "source": [
+    "## Prediction of a new data\n",
+    "\n",
+    "What if you come with a new plant ? let's see."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 807,
    "id": "93f39a95",
@@ -553,6 +563,16 @@
     "plt.scatter(new_plant[0], new_plant[1], c='r')\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebb3e680",
+   "metadata": {},
+   "source": [
+    "The new plant, based on its leaves width/length, is situated here, in red on the graph.\n",
+    "\n",
+    "Let's look at the model prediction for this red dot."
    ]
   },
   {
@@ -593,11 +613,11 @@
    "id": "5fb7e5cf",
    "metadata": {},
    "source": [
-    "You get `True` because the predicted probability is 0.88, which is greater than 0.5.\n",
+    "You get `True` because the predicted probability is 0.93, which is greater than 0.5, so the plant belongs to the toxic ones.\n",
     "\n",
     "So, according to the model, this plant is classified as toxic.\n",
     "\n",
-    "And we can trust this result with 88% confidence.\n"
+    "And we can trust this result with 93% confidence.\n"
    ]
   },
   {
