--- a/notebooks/00_practice-intro.ipynb
+++ b/notebooks/00_practice-intro.ipynb
@@ -628,7 +628,7 @@
     "Now we better understand how the neuron classifies new data.\n",
     "\n",
     "Some points will be classified with high confidence (probability close to 0 or 1),  \n",
-    "while others will fall in the gray area near 0.5, where predictions are more uncertain.\n",
+    "while others will fall near 0.5, where predictions are more uncertain.\n",
     "\n",
     "If we visualize all points with a probability of exactly 0.5,  \n",
     "we get a boundary — the model can’t confidently classify points near it.\n",
@@ -683,11 +683,17 @@
    "id": "0daa0790",
    "metadata": {},
    "source": [
-    "On voit plusieurs choses tres interessantes. Deja on voit ici le modele lineaire du neurone qui permet de prendre une decision entre les deux classes.\n",
+    "We observe several very interesting things here.\n",
     "\n",
-    "On voit aussi que le point rouge etait logique a classifier comme plante toxique car relativement loin de la frontiere de decision. meme plus on se rapproche de cette frontiere et plus les erreurs sont frequentes. c'est normal, le prediction a un taux de confiance proche de 50%, donc il y a une chance sur deux que le modele se trompe aux alentours de cette frontiere.\n",
+    "First, we clearly see the **linear model** learned by the neuron — this model acts as a decision boundary between the two classes (toxic / non-toxic).\n",
     "\n",
-    "On voit donc que meme si on laisse beaucoup de temps au neurone pour apprendre (beaucoup de nombre d'iterations) et trouver le meilleur set (W, b), le modele lineaire a des limites."
+    "Next, we notice that the **red point** (classified as toxic) was reasonably easy to classify — it is **far from the decision boundary**, so the model had **high confidence** in this prediction.\n",
+    "\n",
+    "However, as we get **closer to the decision boundary**, **errors become more frequent**.  \n",
+    "That’s expected: when the prediction probability is around 50%, there’s basically a **coin toss** situation — the model is **uncertain**, and it's more likely to make mistakes.\n",
+    "\n",
+    "This highlights an important limitation:  \n",
+    "Even if we give the neuron **a lot of time to learn** (a large number of training iterations, so called epochs remember), a **linear model** can only go so far. There are **inherent limits** to its performance.\n"
    ]
   },
   {
