--- a/notebooks/00_practice-intro.ipynb
+++ b/notebooks/00_practice-intro.ipynb
@@ -2590,7 +2590,27 @@
    "id": "11f135bd",
    "metadata": {},
    "source": [
-    "So congrats, you just understood a binary classification model."
+    "# So congrats, you just understood a binary classification model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5ce10d5",
+   "metadata": {},
+   "source": [
+    "In real life, we don't just work with 2 variables. Datasets can contain 10, 100, or even 10,000 variables.  \n",
+    "In such cases, it's impossible to visualize the data in 2D plots like the ones we use here for intuition.\n",
+    "\n",
+    "**This is why we use metrics such as the _learning curve_** to evaluate the performance and training quality of a neural network model.\n",
+    "\n",
+    "In the code below, we perform matrix operations, which means the implementation is already compatible with higher-dimensional datasets.  \n",
+    "\n",
+    "Try the following:\n",
+    "- Change the number of input features in `X` (e.g., go from 2 to 5 or 10 variables),\n",
+    "- Play around with the **hyperparameters** like `learning_rate` and `num_iter`,  \n",
+    "to observe **how these affect the neuron’s learning behavior**.\n",
+    "\n",
+    "This will help you understand the **sensitivity of the model** to hyperparameter changes.\n"
    ]
   }
  ],
