--- a/notebooks/practice_01.ipynb
+++ b/notebooks/practice_01.ipynb
@@ -10,24 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "5308289c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid decimal literal (2647217717.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    from 00_practice-into.ipynb import *\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid decimal literal\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#%pip install h5py\n",
+    "#%pip install nbimporter\n",
     "import matplotlib.pyplot as plt\n",
+    "import nbimporter\n",
     "from utilities import *\n",
-    "from practice_00.ipynb import *"
+    "from practice_00 import *"
    ]
   },
   {
