--- a/notebooks/practice_01.ipynb
+++ b/notebooks/practice_01.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "5308289c",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "d8b01aa5",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "fedf90e0",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "565c7876",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "3d6dcb6b",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "a68a3a11",
    "metadata": {},
    "outputs": [],
@@ -194,15 +194,7 @@
    "execution_count": null,
    "id": "55f79cba",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1000, 4096)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_reshaped = []\n",
     "for image in X_train:\n",
@@ -263,7 +255,8 @@
      "output_type": "stream",
      "text": [
       "(1000, 4096)\n",
-      "(200, 4096)\n"
+      "(200, 4096)\n",
+      "[0.00252211 0.00267589 0.00250673 ... 0.00133795 0.00276817 0.00059977]\n"
      ]
     }
    ],
@@ -271,7 +264,35 @@
     "X_train_reshape = X_train.reshape(X_train.shape[0], -1)\n",
     "X_test_reshape = X_test.reshape(X_test.shape[0], -1)\n",
     "print(X_train_reshape.shape)\n",
-    "print(X_test_reshape.shape)"
+    "print(X_test_reshape.shape)\n",
+    "print(X_train_reshape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39e7646f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1000, 4096)\n",
+      "(200, 4096)\n",
+      "[0.00252211 0.00267589 0.00250673 ... 0.00133795 0.00276817 0.00059977]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# normalize the data\n",
+    "X_train = X_train.astype('float32') / 255.0\n",
+    "X_test = X_test.astype('float32') / 255.0\n",
+    "X_train_reshape = X_train.reshape(X_train.shape[0], -1)\n",
+    "X_test_reshape = X_test.reshape(X_test.shape[0], -1)\n",
+    "print(X_train_reshape.shape)\n",
+    "print(X_test_reshape.shape)\n",
+    "print(X_train_reshape[0])\n"
    ]
   }
  ],
