--- a/notebooks/practice_01.ipynb
+++ b/notebooks/practice_01.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "5308289c",
    "metadata": {},
    "outputs": [],
@@ -20,12 +20,12 @@
     "import matplotlib.pyplot as plt\n",
     "import nbimporter\n",
     "from utilities import *\n",
-    "from practice_00 import *"
+    "from practice_00 import artificial_neuron"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "id": "d8b01aa5",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "id": "fedf90e0",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "id": "565c7876",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "id": "3d6dcb6b",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "id": "a68a3a11",
    "metadata": {},
    "outputs": [],
@@ -191,10 +191,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "55f79cba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1000, 4096)\n"
+     ]
+    }
+   ],
    "source": [
     "X_reshaped = []\n",
     "for image in X_train:\n",
@@ -228,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "ee1dfa49",
    "metadata": {},
    "outputs": [],
@@ -246,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "49bb2e65",
    "metadata": {},
    "outputs": [
@@ -256,7 +264,7 @@
      "text": [
       "(1000, 4096)\n",
       "(200, 4096)\n",
-      "[0.00252211 0.00267589 0.00250673 ... 0.00133795 0.00276817 0.00059977]\n"
+      "[164 174 163 ...  87 180  39]\n"
      ]
     }
    ],
@@ -270,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "39e7646f",
    "metadata": {},
    "outputs": [
@@ -280,7 +288,7 @@
      "text": [
       "(1000, 4096)\n",
       "(200, 4096)\n",
-      "[0.00252211 0.00267589 0.00250673 ... 0.00133795 0.00276817 0.00059977]\n"
+      "[0.6431373  0.68235296 0.6392157  ... 0.34117648 0.7058824  0.15294118]\n"
      ]
     }
    ],
@@ -293,6 +301,38 @@
     "print(X_train_reshape.shape)\n",
     "print(X_test_reshape.shape)\n",
     "print(X_train_reshape[0])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6c0dfa5",
+   "metadata": {},
+   "source": [
+    "Maintenant il est temps d'entrainer le modele sur les donnees d'entrainement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdf29df1",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "model() missing 1 required positional argument: 'b'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[51], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# entrainement du modele :\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[43mmodel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train_reshape\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: model() missing 1 required positional argument: 'b'"
+     ]
+    }
+   ],
+   "source": [
+    "# entrainement du modele :\n",
+    "\n",
+    "W, b = artificial_neuron(X_train_reshape, y_train, learning_rate=0.01, num_iter=1000)"
    ]
   }
  ],
